[gd_scene load_steps=9 format=3 uid="uid://main_scene"]

[ext_resource type="Script" path="res://scripts/scenes/main.gd" id="1"]
[ext_resource type="Script" path="res://scripts/scenes/world_root.gd" id="2"]
[ext_resource type="Script" path="res://scripts/scenes/hex_terrain_layer.gd" id="3"]
[ext_resource type="Script" path="res://scripts/scenes/building_layer.gd" id="4"]
[ext_resource type="Script" path="res://scripts/scenes/overlay_layer.gd" id="5"]
[ext_resource type="Script" path="res://scripts/scenes/fx_layer.gd" id="6"]
[ext_resource type="Script" path="res://scripts/scenes/camera_controller.gd" id="7"]
[ext_resource type="Script" path="res://scripts/scenes/hud_root.gd" id="8"]

[node name="Main" type="Node2D"]
script = ExtResource("1")

[node name="WorldRoot" type="Node2D" parent="."]
script = ExtResource("2")

[node name="HexTerrainLayer" type="Node2D" parent="WorldRoot"]
script = ExtResource("3")

[node name="BuildingLayer" type="Node2D" parent="WorldRoot"]
script = ExtResource("4")

[node name="OverlayLayer" type="Node2D" parent="WorldRoot"]
script = ExtResource("5")

[node name="FxLayer" type="Node2D" parent="WorldRoot"]
script = ExtResource("6")

[node name="Camera2D" type="Camera2D" parent="."]
script = ExtResource("7")
zoom = Vector2(1.5, 1.5)

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="HudRoot" type="Control" parent="CanvasLayer"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
script = ExtResource("8")
